--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=9090
 
 #spring.datasource.url=jdbc:mysql://${SPRING_DATASOURCE_HOST}:3306/electronic-be?useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/electronic-be?useSSL=false
+spring.datasource.url=jdbc:sqlserver://;serverName=sso.d2s.com.vn;port=2025;databaseName=ELECTRONIC;encrypt=true;trustServerCertificate=true
 #spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.username=root
+spring.datasource.username=SHDEV_11062025
 #spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.password=12345678
+spring.datasource.password=SHDEV@11062025
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
